# aoc-2024

./: pyproject.toml
solutions/: 2024_01.ipynb  2024_05.ipynb  2024_07.ipynb  2024_08.ipynb  2024_09.ipynb  2024_10.ipynb  2024_11.ipynb  2024_2.ipynb  2024_3.ipynb  2024_4.ipynb  2024_6.ipynb  answer_a.pkl
