[project]
name = "aoc-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "advent-of-code-data>=2.0.4",
    "browser-cookie3>=0.19.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "pyperclip>=1.9.0",
    "ruff>=0.8.1",
    "tqdm>=4.67.1",
]
